# wireviz-studio

./: .gitignore  pyproject.toml  requirements.txt
.github/instructions/: python-venv.instructions.md
.github/prompts/: plan-wireVizStudio.prompt.md
.github/workflows/: main.yml  pages.yml  release.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  implementation-progress.md  index.html  syntax.md
packaging/: README.md  build_native.py
src/wireviz_studio/: __init__.py  __main__.py
src/wireviz_studio/core/: __init__.py  bom.py  colors.py  exceptions.py  graphviz_html.py  harness.py  helpers.py  models.py  parser.py  svg_embed.py
src/wireviz_studio/export/: __init__.py  csv_export.py  pdf_export.py  png_export.py  svg_export.py
src/wireviz_studio/graphviz_manager/: __init__.py  bundled.py  detect.py  download.py
src/wireviz_studio/gui/: __init__.py  app.py  editor.py  export.py  graphviz_setup_dialog.py  highlighter.py  main_window.py  preview.py  settings.py  theme_loader.py  worker.py
src/wireviz_studio/gui/themes/: dark.qss  light.qss
tests/core/: test_bom.py  test_colors.py  test_export.py  test_harness.py  test_models.py  test_parser.py
tests/fixtures/: README.md
